# wappa

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  Dockerfile  META-CHANGELOGS.md  META_PRODUCTION.md  README.md  TEMPLATE_API_GUIDE.md  cleanup_logger.sh  example_webhook_usage.py  fix_imports.sh  main.py  pyproject.toml  skills-lock.json  test_server.py
.agents/skills/bump-version/: SKILL.md
.claude/.docs/: WappaFlex.md
.claude/skills/bump-version/: SKILL.md
.github/workflows/: PUBLISHING.md  publish.yml
backlog/: 260414-whatsapp-template-management-and-template-webhooks.md  260420-messenger-middleware-domain-event-bus.md  260420-platform-agnostic-incoming-webhook-abstraction.md  260420-platform-agnostic-sse-event-envelope.md  260501-platform-agnostic-webhook-field-registry.md  README.md
cache/tables/: 493419253863068_tables.json
cache/users/: 493419253863068_573168227670.json
docs/: public-contract.md
docs/adr/: 0001-inbox-id-runtime-scope.md  0002-inbound-runtime-dispatch-context-clean-break.md  0003-http-client-lifecycle-ownership.md  0004-graceful-shutdown-and-background-work-drain.md
docs/grill-me-sessions/: 260516_pareto-arch-improvements.md  260516_wappa-ddd-refactor.md
docs/implementation-plans/: 004-consolidate-webhook-schemas-and-universal-models.md
docs/tech-requests/: 001-inbox-identity-refactor.md  002-database-inbox-credential-store.md  003-inbound-runtime-dispatch-context.md  004-consolidate-webhook-schemas-and-universal-models.md  005-clean-break-remove-compatibility-shims.md  006-defer-messenger-split.md
examples/: test_multi_tenant_echo.py
examples/echo_project/: README.md  constants.py  echo_handler.py  interactive_builder.py  main.py  media_processor.py  state_manager.py  test_architecture.py
examples/echo_project/logic/: __init__.py  audio_echo.py  button_activation.py  button_prompt.py  button_selection.py  contact_echo.py  cta_activation.py  document_echo.py  image_echo.py  list_activation.py  list_prompt.py  list_selection.py  location_activation.py  location_echo.py  message_confirmation.py  metadata_extraction.py  state_management.py  text_echo.py  user_storage.py  video_echo.py
examples/echo_project/media/: README.md
examples/redis_cache_example/: .gitignore  main.py
examples/redis_cache_example/models/: redis_demo_models.py
examples/simple_echo/: main.py
examples/simple_wappa/: main.py
tests/: __init__.py  conftest.py  test_api_event_tracking.py  test_background_work_tracker.py  test_cache_backends_contracts.py  test_database_session_cleanup.py  test_expiry_redis_connection.py  test_external_webhook_runtime.py  test_http_session_lifecycle.py  test_identity_resolver_propagation.py  test_inbox_credential_store.py  test_jwt_leeway.py  test_logging_format.py  test_media_download_client_isolation.py  test_media_upload_from_url.py  test_memory_store_shutdown.py  test_messenger_pipeline.py  test_multi_inbox_webhook_context.py  test_rate_limit_plugin.py  test_recipient_resolution.py  test_router_tree_and_public_routes.py  test_session_cancel_rollback.py  test_session_lifecycle.py  test_shutdown_lifecycle.py  test_sse_context_flow.py  test_template_pipeline.py  test_typed_table_cache.py  test_user_id_flow.py  test_webhook_auth_contract.py  test_webhook_schema_ownership.py  test_whatsapp_client_logging.py  test_whatsapp_meta_bsuid_contract.py  test_whatsapp_payload_factories.py  test_whatsapp_processor_user_base.py  test_whatsapp_template_routing.py
tests/core/: __init__.py
tests/core/factory/: __init__.py  test_wappa_builder.py
wappa/: __init__.py  sse.py
wappa/api/: __init__.py
wappa/api/controllers/: __init__.py  webhook_controller.py
wappa/api/dependencies/: __init__.py  cache_dependencies.py  event_dependencies.py  whatsapp_dependencies.py  whatsapp_media_dependencies.py
wappa/api/middleware/: __init__.py  error_handler.py  inbox.py  owner.py  request_logging.py
wappa/api/models/: handler_models.py
wappa/api/routes/: __init__.py  health.py  sse.py  webhooks.py  whatsapp_combined.py
wappa/api/services/: __init__.py  handler_state_service.py  template_state_service.py
wappa/api/utils/: __init__.py  error_helpers.py  event_decorators.py  inbox_helpers.py  response_helpers.py  tenant_helpers.py
wappa/cli/: ARCHITECTURE.md  CONTEXT.md  __init__.py  main.py
wappa/cli/templates/: env.template  gitignore.template  main.py.template  master_event.py.template
wappa/core/: __init__.py  context.py  types.py  wappa_app.py
wappa/core/auth/: __init__.py  middleware.py  strategy.py
wappa/core/config/: __init__.py  settings.py
wappa/core/events/: __init__.py  api_event_dispatcher.py  cron_event_dispatcher.py  default_handlers.py  event_dispatcher.py  event_handler.py  external_event_dispatcher.py  field_registry.py  webhook_factory.py
wappa/core/expiry/: ARCHITECTURE.md  CONTEXT.md  __init__.py  app_context.py  connection.py  context_helpers.py  dispatcher.py  listener.py  parser.py  reconnection.py  registry.py
wappa/database/: __init__.py  adapter.py  session_manager.py
wappa/domain/: __init__.py
wappa/messaging/: ARCHITECTURE.md  CONTEXT.md  __init__.py
wappa/models/: __init__.py
wappa/persistence/: ARCHITECTURE.md  CONTEXT.md  __init__.py  cache_factory.py  typed_table_cache.py
wappa/processors/: __init__.py  base_processor.py  factory.py  whatsapp_processor.py
wappa/schemas/: __init__.py  factory.py
wappa/sse/: __init__.py
wappa/webhooks/: ARCHITECTURE.md  CONTEXT.md  __init__.py  factory.py
(+341 files in other folders)
